--- a/server/.env.example
+++ b/server/.env.example
@@ -1,6 +1,3 @@
-SESSION_SECRET=
-NODE_ENV=development
+JWT_SECRET=<jwt-secret>
+JWT_ACCESS_EXPIRATION=1d
 PORT=5000
-UTC_OFFSET=7
-MONGODB_STRING_DEV=
-MONGODB_STRING_PROD=
