--- a/server/ormconfig.json
+++ b/server/ormconfig.json
@@ -5,17 +5,17 @@
    "synchronize": true,
    "logging": true,
    "entities": [
-      "src/data/entities/**/*.ts"
-   ],
-   "migrations": [
-      "src/data/migrations/**/*.ts"
+      "dist/data/entities/**/*.js"
    ],
    "subscribers": [
-      "src/data/subscribers/**/*.ts"
+      "dist/data/subscribers/**/*.js"
+   ],
+   "migrations": [
+      "dist/data/migrations/**/*.js"
    ],
    "cli": {
-      "entitiesDir": "src/data/entities",
-      "migrationsDir": "src/data/migrations",
-      "subscribersDir": "src/data/subscribers"
+      "entitiesDir": "dist/data/entities",
+      "migrationsDir": "dist/data/migrations",
+      "subscribersDir": "dist/data/subscribers"
    }
 }
