--- a/server/package.json
+++ b/server/package.json
@@ -8,18 +8,15 @@
     "watch-sass": "node-sass -w --recursive -o dist/public/css/ src/public/scss/",
     "dev": "concurrently \"npm:build:dev\" \"npm:start:dev\" \"npm:watch-sass\"",
     "start:dev": "nodemon dist/server.js",
-
     "build-ts": "tsc",
     "build": "npm run build-ts && npm run build:sass && npm run copy-static-assets",
     "build:dev": "tsc --watch --preserveWatchOutput && npm run copy-static-assets",
     "build:sass": "node-sass --output-style compressed --recursive -o dist/public/css/ src/public/scss/",
-
     "typeorm:win": "ts-node ./node_modules/typeorm/cli.js",
     "migration:gen": "ts-node ./node_modules/.bin/typeorm migration:generate",
     "migration:run": "ts-node ./node_modules/.bin/typeorm migration:run",
     "migration:gen:win": "yarn run typeorm:win migration:generate",
     "migration:run:win": "yarn run typeorm:win migration:run",
-    
     "copy-static-assets": "ts-node copyStaticAssets.ts",
     "key:generate": "node ./generateKeypair.js",
     "test": "jest --coverage --verbose --forceExit --detectOpenHandles"
@@ -36,6 +33,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "http-status": "^1.5.0",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "mqtt": "^4.2.8",
@@ -51,7 +49,7 @@
     "@types/cors": "^2.8.12",
     "@types/eslint": "^7.2.13",
     "@types/express": "^4.17.12",
-    "@types/jest": "^26.0.24",
+    "@types/jest": "^27.0.2",
     "@types/jsonwebtoken": "^8.5.3",
     "@types/node": "^16.3.0",
     "@types/shelljs": "^0.8.8",
