--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "./dist/server.js",
   "scripts": {
-    "start": "node .",
+    "start": "cross-env NODE_ENV=production node .",
     "watch-sass": "node-sass -w --recursive -o dist/public/css/ src/public/scss/",
-    "dev": "concurrently \"npm:build:dev\" \"npm:start:dev\" \"npm:watch-sass\"",
+    "dev": "cross-env NODE_ENV=development concurrently \"npm:build:dev\" \"npm:start:dev\" \"npm:watch-sass\"",
     "start:dev": "nodemon dist/server.js",
     "build-ts": "tsc",
-    "build": "npm run build-ts && npm run build:sass && npm run copy-static-assets",
-    "build:dev": "tsc --watch --preserveWatchOutput && npm run copy-static-assets",
+    "build": "cross-env NODE_ENV=production npm run build-ts && npm run build:sass && npm run copy-static-assets",
+    "build:dev": "cross-env NODE_ENV=development tsc --watch --preserveWatchOutput && npm run copy-static-assets",
     "build:sass": "node-sass --output-style compressed --recursive -o dist/public/css/ src/public/scss/",
     "typeorm:win": "ts-node ./node_modules/typeorm/cli.js",
     "migration:gen": "ts-node ./node_modules/.bin/typeorm migration:generate",
@@ -19,7 +19,7 @@
     "migration:run:win": "yarn run typeorm:win migration:run",
     "copy-static-assets": "ts-node copyStaticAssets.ts",
     "key:generate": "node ./generateKeypair.js",
-    "test": "jest --coverage --verbose --forceExit --detectOpenHandles"
+    "test": "cross-env NODE_ENV=testing jest --coverage --verbose --forceExit --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
@@ -29,6 +29,7 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
