--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -11,7 +11,7 @@ FROM node:alpine AS builder
 WORKDIR /app
 COPY . .
 COPY --from=deps /app/node_modules ./node_modules
-RUN yarn build && yarn install --production --ignore-scripts --prefer-offline
+RUN yarn build
 
 
 FROM node:alpine AS runner
@@ -23,6 +23,7 @@ COPY --from=builder /app/ormconfig.json ./
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/package.json ./package.json
+COPY --from=builder /app/src/views ./src/views
 
 EXPOSE 5000
 
