--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,7 +33,7 @@ jobs:
       - uses: c-hive/gha-yarn-cache@v2
 
       - name: Install JS dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install
 
       - name: Prepare Environment
         uses: CallePuzzle/envvar-to-dotenv-action@v1.0.0
