update build config + added postbuild test

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -6,6 +6,11 @@ WORKDIR /app
 COPY package.json yarn.lock ./
 RUN yarn install --frozen-lockfile
 
+FROM node:alpine AS proddeps
+RUN apk add --no-cache libc6-compat
+WORKDIR /app
+COPY package.json yarn.lock ./
+RUN yarn install --production --frozen-lockfile
 
 FROM node:alpine AS builder
 WORKDIR /app
@@ -19,8 +24,8 @@ WORKDIR /app
 
 ENV NODE_ENV production
 
-COPY --from=builder /app/ormconfig.json ./
-COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/ormconfig.js ./
+COPY --from=proddeps /app/node_modules ./node_modules
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/package.json ./package.json
 COPY --from=builder /app/src/views ./src/views
