--- a/server/package.json
+++ b/server/package.json
@@ -6,23 +6,27 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node .",
     "watch-sass": "sass -w src/public/scss/:dist/public/css/",
-    "dev": "cross-env NODE_ENV=development concurrently \"ts-node-dev --respawn --transpile-only ./src/server.ts\" \"npm:watch-sass\"",
+    "watch-static": "nodemon --watch src/public --exec npm run copy-static-assets",
+    "dev": "cross-env NODE_ENV=development concurrently \"ts-node-dev --respawn --transpile-only ./src/server.ts\" \"npm:watch-sass\" \"npm:watch-static\"",
     "build-ts": "tsc",
-    "build": "cross-env NODE_ENV=production npm run build-ts && npm run build:sass",
-    "build:dev": "cross-env NODE_ENV=development npm run build-ts && npm run build:sass",
+    "build": "cross-env NODE_ENV=production npm run build-ts && npm run build:sass && npm run copy-static-assets",
+    "build:dev": "cross-env NODE_ENV=development npm run build-ts && npm run build:sass && npm run copy-static-assets",
     "build:sass": "sass --style=compressed src/public/scss/:dist/public/css/",
+    "copy-static-assets": "ts-node copyStaticAssets.ts",
     "typeorm:win": "ts-node ./node_modules/typeorm/cli.js",
     "migration:gen": "ts-node ./node_modules/.bin/typeorm migration:generate",
     "migration:run": "ts-node ./node_modules/.bin/typeorm migration:run",
     "migration:gen:win": "yarn run typeorm:win migration:generate",
     "migration:run:win": "yarn run typeorm:win migration:run",
-    "test": "cross-env NODE_ENV=testing jest --silent=false --coverage --verbose --forceExit --detectOpenHandles"
+    "test": "cross-env NODE_ENV=testing jest --silent=false --coverage --verbose --forceExit --detectOpenHandles",
+    "test:build": "cross-env NODE_ENV=posttesting jest --config=build.jest.config.js --verbose"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.7.2",
+    "chalk": "^4.1.2",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
