--- a/.github/workflows/server-test.yml
+++ b/.github/workflows/server-test.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Server Test
 
 on:
   push:
@@ -48,3 +48,6 @@ jobs:
       - name: Build
         run: |
           yarn run build
+
+      - name: Post Build Test
+        run: yarn run test:build
