update prod docker

--- a/server/package.json
+++ b/server/package.json
@@ -13,12 +13,13 @@
     "build:dev": "cross-env NODE_ENV=development npm run build-ts && npm run build:sass && npm run copy-static-assets",
     "build:sass": "sass --style=compressed src/public/scss/:dist/public/css/",
     "copy-static-assets": "ts-node copyStaticAssets.ts",
-    "typeorm:win": "ts-node ./node_modules/typeorm/cli.js",
-    "migration:gen": "ts-node ./node_modules/.bin/typeorm migration:generate",
-    "migration:run": "ts-node ./node_modules/.bin/typeorm migration:run",
+    "typeorm:win": "node ./node_modules/typeorm/cli.js",
+    "migration:gen": "node ./node_modules/.bin/typeorm migration:generate",
+    "migration:run": "node ./node_modules/.bin/typeorm migration:run",
     "migration:gen:win": "yarn run typeorm:win migration:generate",
     "migration:run:win": "yarn run typeorm:win migration:run",
     "test": "cross-env NODE_ENV=testing jest --silent=false --coverage --verbose --forceExit --detectOpenHandles",
+    "docker:build": "docker build --file ./Dockerfile -t iot-project-mid-led .",
     "test:build": "cross-env NODE_ENV=posttesting jest --config=build.jest.config.js --verbose"
   },
   "keywords": [],
