--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -7,10 +7,11 @@ COPY package.json yarn.lock ./
 RUN yarn install --frozen-lockfile
 
 FROM node:alpine AS proddeps
-RUN apk add --no-cache libc6-compat
 WORKDIR /app
-COPY package.json yarn.lock ./
-RUN yarn install --production --frozen-lockfile
+COPY --from=deps /app/node_modules ./node_modules
+COPY --from=deps /app/package.json ./
+COPY --from=deps /app/yarn.lock ./
+RUN npm prune --production
 
 FROM node:alpine AS builder
 WORKDIR /app
@@ -24,11 +25,10 @@ WORKDIR /app
 
 ENV NODE_ENV production
 
-COPY --from=builder /app/ormconfig.js ./
+COPY ormconfig.js ./
 COPY --from=proddeps /app/node_modules ./node_modules
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/package.json ./package.json
-COPY --from=builder /app/src/views ./src/views
 
 EXPOSE 5000
 
