--- a/.github/workflows/server-docker.yml
+++ b/.github/workflows/server-docker.yml
@@ -36,4 +36,4 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest
+            ${{ env.IMAGE_NAME }}:latest
