--- a/.github/workflows/server-docker.yml
+++ b/.github/workflows/server-docker.yml
@@ -16,7 +16,11 @@ jobs:
         working-directory: ./server
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
 
       - name: Set up Docker Buildx
         id: buildx
@@ -32,8 +36,9 @@ jobs:
       - name: 'Build image and push to Docker Hub and GitHub Container Registry'
         uses: docker/build-push-action@v2
         with:
-          context: .
-          file: ./Dockerfile
+          context: ./server
+          registry: ghcr.io
+          file: ./server/Dockerfile
           push: true
           tags: |
             ${{ env.IMAGE_NAME }}:latest
