--- a/.github/workflows/server-docker.yml
+++ b/.github/workflows/server-docker.yml
@@ -33,12 +33,16 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GHCR_PAT }}
 
+      - id: reponame
+        uses: ASzc/change-string-case-action@v1
+        with:
+          string: ${{ github.repository_owner }}/${{ env.IMAGE_NAME }}
+
       - name: 'Build image and push to Docker Hub and GitHub Container Registry'
         uses: docker/build-push-action@v2
         with:
-          context: ./server
-          registry: ghcr.io
+          context: ./server/Dockerfile
           file: ./server/Dockerfile
           push: true
           tags: |
-            ${{ env.IMAGE_NAME }}:latest
+            ghcr.io/${{ steps.reponame.outputs.lowercase }}:latest
