--- a/.github/workflows/server-docker.yml
+++ b/.github/workflows/server-docker.yml
@@ -41,7 +41,7 @@ jobs:
       - name: 'Build image and push to Docker Hub and GitHub Container Registry'
         uses: docker/build-push-action@v2
         with:
-          context: ./server/Dockerfile
+          context: ./server
           file: ./server/Dockerfile
           push: true
           tags: |
