--- a/embedded/platformio.ini
+++ b/embedded/platformio.ini
@@ -10,10 +10,15 @@
 
 [env:nodemcuv2]
 platform = espressif8266
-board = nodemcuv2
+board = d1_mini
 framework = arduino
-monitor_speed = 115200
+monitor_speed = 9600
+upload_port=COM1
 src_filter = +<*>
 lib_deps = 
+	me-no-dev/ESPAsyncTCP @ ^1.2.2
+	ottowinter/ESPAsyncWebServer-esphome @ ^2.0.1
+	ayushsharma82/AsyncElegantOTA @ ^2.2.5
 	bblanchon/ArduinoJson@^6.18.0
 	knolleary/PubSubClient@^2.8
+	pfeerick/elapsedMillis @ ^1.0.6
