--- a/embedded/platformio.ini
+++ b/embedded/platformio.ini
@@ -19,6 +19,6 @@ lib_deps =
 	me-no-dev/ESPAsyncTCP @ ^1.2.2
 	ottowinter/ESPAsyncWebServer-esphome @ ^2.0.1
 	ayushsharma82/AsyncElegantOTA @ ^2.2.5
-	bblanchon/ArduinoJson@^6.18.0
+	bblanchon/ArduinoJson@5.13.4
 	knolleary/PubSubClient@^2.8
 	pfeerick/elapsedMillis @ ^1.0.6
