--- a/.github/workflows/server-docker.yml
+++ b/.github/workflows/server-docker.yml
@@ -34,6 +34,7 @@ jobs:
           password: ${{ secrets.GHCR_PAT }}
 
       - id: reponame
+        name: Lowercase the Docker Registry Repo Name
         uses: ASzc/change-string-case-action@v1
         with:
           string: ${{ github.repository_owner }}/${{ env.IMAGE_NAME }}
