--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,27 +1,27 @@
 ARG BUILD_ENV
 
-FROM node:alpine AS deps
+FROM node:14-alpine AS deps
 RUN apk add --update python make g++\
    && rm -rf /var/cache/apk/*
 WORKDIR /app
 COPY package.json yarn.lock ./
 RUN yarn install --frozen-lockfile
 
-FROM node:alpine AS proddeps
+FROM node:14-alpine AS proddeps
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY --from=deps /app/package.json ./
 COPY --from=deps /app/yarn.lock ./
 RUN npm prune --production
 
-FROM node:alpine AS builder
+FROM node:14-alpine AS builder
 WORKDIR /app
 COPY . .
 COPY --from=deps /app/node_modules ./node_modules
 RUN yarn build
 
 
-FROM node:alpine AS runner
+FROM node:14-allpine AS runner
 WORKDIR /app
 
 ENV NODE_ENV production
