--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "dayjs": "^1.10.7",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
@@ -42,6 +43,7 @@
     "mqtt": "^4.2.8",
     "nanoid": "^3.1.22",
     "node-sass": "^6.0.1",
+    "node-schedule": "^2.0.0",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
     "typeorm": "^0.2.38",
@@ -55,6 +57,7 @@
     "@types/jest": "^27.0.2",
     "@types/jsonwebtoken": "^8.5.3",
     "@types/node": "^16.3.0",
+    "@types/node-schedule": "^1.3.2",
     "@types/shelljs": "^0.8.8",
     "@types/supertest": "^2.0.11",
     "@types/winston": "^2.4.4",
