--- a/.github/workflows/server-docker.yml
+++ b/.github/workflows/server-docker.yml
@@ -16,6 +16,14 @@ jobs:
         working-directory: ./server
 
     steps:
+      - name: Wait for tests to succeed
+        uses: lewagon/wait-on-check-action@v1.0.0
+        with:
+          ref: ${{ github.ref }}
+          check-name: 'test-server'
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          wait-interval: 10
+
       - name: Checkout
         uses: actions/checkout@v2
 
