--- a/.github/workflows/server-test.yml
+++ b/.github/workflows/server-test.yml
@@ -15,7 +15,7 @@ env:
   JWT_ACCESS_EXPIRATION: "1d"
 
 jobs:
-  test-node:
+  test-server:
     runs-on: ubuntu-latest
     if: ${{ !contains(github.event.head_commit.message, '[skip ci]') }}
     defaults:
