--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,8 +1,7 @@
 ARG BUILD_ENV
 
 FROM node:14-alpine AS deps
-RUN apk add --update python make g++\
-   && rm -rf /var/cache/apk/*
+RUN apk add --no-cache libc6-compat
 WORKDIR /app
 COPY package.json yarn.lock ./
 RUN yarn install --frozen-lockfile
